--- a/app/Templates/home.html
+++ b/app/Templates/home.html
@@ -3,49 +3,51 @@
 {% block title%}FISH INFO{% endblock %}
 {% block body%}
 
-<div class="container px-6">
-    <div class="row gx-6">
-        <div class="col-lg-6">
-            <!-- Conteúdo do trecho de código que você forneceu -->
-            <div class="p-5" >
-                <h2 class="display-8"  style="color: #000080;"><strong> Fish-Info: Gerenciamento de dados para piscicultor</strong> </h2>
-              <p> O FISH INFO tem como proposito de ajudar os piscicultores para ter uma
+<html>
+<head>
+    <!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        /* Defina o estilo para o elemento body para a imagem de fundo */
+        body {
+            background-image: url('{% static 'imagem/açude.png' %}');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed; /* Isso fixa a imagem de fundo para que ela não role com a página */
+            margin: 0; /* Remova as margens padrão do body */
+            padding: 0; /* Remova o preenchimento padrão do body */
+        }
+
+        /* Estilos para o conteúdo dentro da coluna direita */
+        .col-lg-6 {
+            height: 100vh; /* Isso faz com que a coluna tenha a altura da tela inteira */
+        }
+    </style>
+</head>
+<body>
+    <div class="container px-6" style="height: 500px;">
+        <div class="row gx-6">
+            <div class="col-lg-6">
+                <div class="p-2">
+                  <h2 class="display-8"  style="color: #D2691E"><strong> Fish-Info: Gerenciamento de dados para piscicultor</strong> </h2>
+              <p style="color: #2F4F4F"> O FISH INFO tem como proposito de ajudar os piscicultores para ter uma
                 administração dos seus criadouros, assim promovendo o gerenciamento de informações
                 de criadouro por intermédio de um sistema web, no qual possuirá os requisitos
                 desejados de cadastramento e busca por informações dos viveiros do piscicultor.</p>
-
-            </div>
-        </div>
-        <div class="col-lg-6">
-            <!-- Carrossel (Carousel) aqui -->
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'imagem/peixe.png'%}" class="d-block w-100 " alt="..."
-                            style="max-height: 300px;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{%static 'imagem/viveiro.png'%}" class="d-block w-100" alt="..."
-                            style="max-height: 400px;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{%static 'imagem/pirarucu.png'%}" class="d-block w-100" alt="..."
-                            style="max-height: 300px;">
-                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            </div>
+            <div class="col-lg-6">
+                <!-- Conteúdo dentro da coluna direita aqui -->
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
+
+
+
+
 
 {% endblock %}
