--- a/app/Templates/menu.html
+++ b/app/Templates/menu.html
@@ -2,92 +2,99 @@
 {% load static %}
 {% block menu%}
 
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-<nav class="navbar navbar-expand-lg navbar-light bg-lightblue">
-  <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="navbar-brand" aria-current="page" href="#"><img src="{% static 'imagem/logo3.png' %}" height="80px"/></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'IndexPiscicultor'%}">Piscicultor</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Biometria peixe</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Viveiro
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'create_viveiro'%}">cadastrar</a></li>
-            <li><a class="dropdown-item" href="{% url 'IndexPeixe'%}">Editar</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           Peixe
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'create_peixe'%}">cadastrar</a></li>
-            <li><a class="dropdown-item" href="{% url 'IndexPeixe'%}">Editar</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           Ração
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'create_racao'%}">cadastrar</a></li>
-            <li><a class="dropdown-item" href="{% url 'IndexPeixe'%}">Editar</a></li>
-          </ul>
-        </li>
 
-      </ul>
-        <div class="col-6 m-auto pt-2 pb-2 my-lg-0 ml-auto">
-      <form class="d-flex" role="Pesquisar">
-        <input class="form-control mr-sm-2 rounded form-contro-1l me" type="search" placeholder="Pesquisa" aria-label="Search">
-        <button class="btn btn-success my-2 my-sm-0 border rounded"type="submit">Pesquisar</button>
-      </form>
-    </div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-lightblue">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'login'%}">Sair</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+<head>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light navbar-dark-blue" style="background-color:	#4682B4#F5F5F5">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="navbar-brand" aria-current="page" ><img src="{% static 'imagem/logo3.png' %}" height="80px"/></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbar-link text-black texto-grande"  href="{% url 'IndexPiscicultor'%}"><strong>Piscicultor</strong></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link navbar-link text-black  texto-grande" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <strong>Viveiro</strong>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item navbar-link" href="{% url 'create_viveiro'%}"><strong>Cadastrar</strong></a></li>
+                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexPeixe'%}"><strong>Editar</strong></a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link navbar-link text-black  texto-grande" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <strong>Peixe</strong>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item navbar-link" href="{% url 'create_peixe'%}"><strong>Cadastrar</strong></a></li>
+                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexPeixe'%}"><strong>Editar</strong></a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link navbar-link text-black  texto-grande" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <strong>Ração</strong>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item navbar-link" href="{% url 'create_racao'%}"><strong>Cadastrar</strong></a></li>
+                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexPeixe'%}"><strong>Editar</strong></a></li>
+                    </ul>
+                </li>
+            </ul>
+            <nav class="navbar navbar-expand-lg navbar-light navbar-dark-blue" collapse navbar-collapse style="background-color:	#4682B4>
+
+
+
+                <div class="" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                          <li class="nav-item">
+    <a class="nav-link navbar-link" href="{% url 'login'%}">
+        <img src="{% static 'imagem/sair3.png' %}"  alt="" width="30" height="30">
+    </a>
+</li>
+
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
-  </div>
 </nav>
-<div class="container"><br>{% endblock %}{% block footer%}<br><br></div>
+<div class="container">
+    <br>
+    {% endblock %}
+    {% block footer %}
+    <br><br>
+</div>
 <footer class="bd-footer bg-body bg-white" style="height: 50%;">
     <div class="container text-body-secondary">
         <div class="row">
             <div class="col-6">
-               <strong>FISH INFO</strong>
+                <strong>FISH INFO</strong>
             </div>
             <div class="col-2">
-                <strong>Termo de Uso </strong>
+                <strong>Termo de Uso</strong>
             </div>
             <div class="col-2">
                 <strong>Sobre</strong>
             </div>
             <div class="col-2">
-               <strong>Redes Sociais</strong>
+                <strong>Redes Sociais</strong>
             </div>
         </div>
     </div>
 </footer>
+</body>
+
 {% endblock %}
