--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,5 +1,57 @@
-.navbar {
-  background-color: #87CEEB;
-
+/* Estilos para a barra de navegação */
+.navbar-custom {
+    background-color: #1E90FF;
+    color: #fff;
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* Estilos para o menu suspenso */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn, .dropdown-content a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Estilo para o link "Sair" */
+.logout {
+    float: right;
+}
+
+.texto-grande {
+    font-size: 23px;
+}
+
 
